@@ -4,6 +4,11 @@ Release notes
 tig master
 ----------
 
+Incompatibilities:
+
+ - The screen-resize action has been deprecated. It had no real use for
+   users and was never meant to be exposed.
+
 Improvements:
 
  - Tree view: avoid flickering when updating.
